--- a/config/resnet_fpn_transformer.yml
+++ b/config/resnet_fpn_transformer.yml
@@ -3,7 +3,8 @@ pretrain:
     md5: 7068030afe2e8fc639d0e1e2c25612b3
     cached: /tmp/tranformerorc.pth
 
-weights: https://drive.google.com/uc?id=12dTOZ9VP7ZVzwQgVvqBWz5JO5RXXW5NY
+# weights: https://drive.google.com/uc?id=12dTOZ9VP7ZVzwQgVvqBWz5JO5RXXW5NY
+weights: /data/lz/GitHub/vietocr/weights/resnet_transformerocr.pth
 
 backbone: resnet50_fpn
 cnn: {}
