--- a/config/base.yml
+++ b/config/base.yml
@@ -11,7 +11,7 @@ transformer:
     num_encoder_layers: 6
     num_decoder_layers: 6
     dim_feedforward: 2048
-    max_seq_length: 1024
+    max_seq_length: 256
     pos_dropout: 0.1
     trans_dropout: 0.1
 
@@ -20,12 +20,12 @@ optimizer:
     pct_start: 0.1
 
 trainer:
-    batch_size: 8
+    batch_size: 64
     print_every: 200
-    valid_every: 4000
+    valid_every: 400
     iters: 100000
     # where to save our model for prediction
-    export: ./weights/transformerocr.pth
+    export: ./weights/resnet-transformer.pth
     checkpoint: ./checkpoint/transformerocr_checkpoint.pth
     log: ./train.log
     # null to disable compuate accuracy, or change to number of sample to enable validiation while training
@@ -41,10 +41,10 @@ dataset:
     # resize image to 32 height, larger height will increase accuracy
     image_height: 32
     image_min_width: 32
-    image_max_width: 512
+    image_max_width: 400
 
 dataloader:
-    num_workers: 3
+    num_workers: 2
     pin_memory: True
 
 aug:
